# lA82lBNDpo9AlAnK

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
deposit_classification/: __init__.py  config.py  dataset.py  features.py  plots.py
deposit_classification/modeling/: predict.py  train.py
docs/: README.md  mkdocs.yml
docs/docs/: getting-started.md  index.md
notebooks/: DepositMarketing_1.ipynb  DepositMarketing_2.ipynb  DepositMarketing_3.ipynb  DepositMarketing_4.ipynb  DepositMarketing_5.ipynb  DepositMarketing_6.ipynb  evaluate_binary_classifier.py
